--- a/archive.html
+++ b/archive.html
@@ -1,10 +1,12 @@
 ---
-layout: page
+layout: default
 title : Archive
 header : Post Archive
 group: navigation
 ---
 {% include JB/setup %}
+{% include themes/twitter/archive.html %}
 
-{% assign posts_collate = site.posts %}
-{% include JB/posts_collate %}
+	{% assign posts_collate = site.posts %}
+	<div class="col-md-offset-4">{% include JB/posts_collate %}</div>
+</center>
