--- a/tags.html
+++ b/tags.html
@@ -1,20 +1,21 @@
 ---
-layout: page
-title: Tags
+layout: default
+title: Categories
 header: Posts By Tag
 group: navigation
 ---
 {% include JB/setup %}
+{% include themes/twitter/tags.html %}
 
-<ul class="tag_box inline">
+<ul class="tag_box inline col-md-offset-5">
   {% assign tags_list = site.tags %}  
-  {% include JB/tags_list %}
+  <!-- {% include JB/tags_list %} -->
 </ul>
 
 
 {% for tag in site.tags %} 
   <h2 id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
-  <ul>
+  <ul class="col-md-offset-5">
     {% assign pages_list = tag[1] %}  
     {% include JB/pages_list %}
   </ul>
